--- a/dkms.conf
+++ b/dkms.conf
@@ -1,10 +1,9 @@
 PACKAGE_NAME="force-remove-bootfb"
 PACKAGE_VERSION="0.0.1"
 
-# Items below here should not have to change with each driver version
-MAKE[0]="make KERNEL_DIR=${kernel_source_dir} module"
+MAKE="make dkms"
 CLEAN="make clean"
 
-BUILT_MODULE_NAME[0]="$PACKAGE_NAME"
-DEST_MODULE_LOCATION[0]="/extra"
+BUILT_MODULE_NAME="$PACKAGE_NAME"
+DEST_MODULE_LOCATION="/kernel/drivers/video/fbdev"
 AUTOINSTALL="yes"
