Updated README with new info

--- a/dkms.conf
+++ b/dkms.conf
@@ -1,8 +1,8 @@
 PACKAGE_NAME="force-remove-bootfb"
 PACKAGE_VERSION="0.0.1"
 
-MAKE="make dkms"
-CLEAN="make clean"
+MAKE[0]="make dkms TARGET=${kernelver}"
+CLEAN="make dkms-clean"
 
 BUILT_MODULE_NAME="$PACKAGE_NAME"
 DEST_MODULE_LOCATION="/kernel/drivers/video/fbdev"
